--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                                 <img src="img/profile.jpg" style="border-top-left-radius: 50px;border-top-right-radius:50px;" alt="">
                             </div>
                             <div class="hs-content fix">
-                                <h2>We are UP Bangladesh.</h2>
-                                <h1>But I must explain to you how.</h1>
+                                <h2>We are ...</h2>
+                                <h1>United People's Bangladesh.</h1>
                                 <p> To build an equal, prosperous Bangladesh, we unite youth's courage & elders' wisdom—transforming political culture & restoring the social contract.</p>
                                 <a href="#about-area" data-scroll class="btn btn-xlg">let's go <i
                                         class="zmdi zmdi-long-arrow-right"></i></a>
@@ -141,8 +141,8 @@
                                 <img src="img/profile.jpg" style="border-top-left-radius: 50px;border-top-right-radius:50px;" alt="">
                             </div>
                             <div class="hs-content fix">
-                                <h2>We are UP Bangladesh.</h2>
-                                <h1>But I must explain to you how.</h1>
+                                <h2>We are ...</h2>
+                                <h1>United People's Bangladesh.</h1>
                                 <p>To build an equal, prosperous Bangladesh, we unite youth's courage & elders' wisdom—transforming political culture & restoring the social contract.</p>
                                 <a href="#about-area" data-scroll class="btn btn-xlg">let's go <i
                                         class="zmdi zmdi-long-arrow-right"></i></a>
