--- a/demo.html
+++ b/demo.html
@@ -162,7 +162,7 @@
                 <!--Section Title Start-->
                 <div class="row">
                     <div class="section-title text-center col-12 mb-60">
-                        <h1>Welcome to politic</h1>
+                        <h1>Welcome to UP Bangladesh </h1>
                     </div>
                 </div>
                 <!--Section Title End-->
