--- a/demo.html
+++ b/demo.html
@@ -347,20 +347,131 @@
                         <div class="single-achivment">
                             <img src="img/achivment.png" alt="">
                             <h4>Finibus Bonorum et Malorum 2010</h4>
-                            <p>There are many variations of passages of Lorem Ipsumavailable,but the majority have suffered
-                                alteration insome form, by injected humour amr sonar banla ami tomay </p>
+                            <p>Assalamu Alaikum,
+
+With a firm commitment to realizing the aspirations of July, the upcoming political platform has been named "United Peoples Bangladesh (UP Bangladesh)."
+
+By the aspirations of July, we specifically refer to a set of clearly defined objectives. With the broad support of the students and people of Bangladesh, this platform will move forward to achieve those goals, In Sha Allah.
+
+The primary objectives of the platform include:
+
+Seeking justice for the brutal massacres of Pilkhana, Shapla, and July,
+
+Demanding a ban on the fascist political party Awami League, and
+
+Building public opinion and political movements to ensure economic empowerment for the injured fighters and families of the martyrs of July.
+
+The long-term goals of the platform are:
+
+Transforming the existing political culture of Bangladesh,
+
+Establishing competent and ethical leadership across all sectors,
+
+Ensuring social justice and human dignity,
+
+Providing social security, and
+
+Rebuilding Bangladesh based on a social contract rooted in religious beliefs and moral values.
+
+We aim to uproot the cycle of muscle politics, corruption, and the criminal political economy that dominates current governance.
+
+The platform is committed to liberating Bangladesh from four major evils: Fascism, Imperialism, Anti-religious Bigotry, and Corruption.
+It will carry the vision of a corruption-free, equitable, and prosperous Bangladesh, along with economic freedom for all citizens.
+
+We invite you to actively participate in this initiative to rebuild post-uprising Bangladesh.
+Let us stand shoulder to shoulder in this struggle to shape the future of our nation.
+
+In solidarity,
+Ali Ahsan Junayed
+Chief Initiator, United Peoples Bangladesh
+
+ </p>
                         </div>
                         <div class="single-achivment">
                             <img src="img/achivment.png" alt="">
                             <h4>Finibus Bonorum et Malorum 2010</h4>
-                            <p>There are many variations of passages of Lorem Ipsumavailable,but the majority have suffered
-                                alteration insome form, by injected humour amr sonar banla ami tomay </p>
+                            <p>Assalamu Alaikum,
+
+With a firm commitment to realizing the aspirations of July, the upcoming political platform has been named "United Peoples Bangladesh (UP Bangladesh)."
+
+By the aspirations of July, we specifically refer to a set of clearly defined objectives. With the broad support of the students and people of Bangladesh, this platform will move forward to achieve those goals, In Sha Allah.
+
+The primary objectives of the platform include:
+
+Seeking justice for the brutal massacres of Pilkhana, Shapla, and July,
+
+Demanding a ban on the fascist political party Awami League, and
+
+Building public opinion and political movements to ensure economic empowerment for the injured fighters and families of the martyrs of July.
+
+The long-term goals of the platform are:
+
+Transforming the existing political culture of Bangladesh,
+
+Establishing competent and ethical leadership across all sectors,
+
+Ensuring social justice and human dignity,
+
+Providing social security, and
+
+Rebuilding Bangladesh based on a social contract rooted in religious beliefs and moral values.
+
+We aim to uproot the cycle of muscle politics, corruption, and the criminal political economy that dominates current governance.
+
+The platform is committed to liberating Bangladesh from four major evils: Fascism, Imperialism, Anti-religious Bigotry, and Corruption.
+It will carry the vision of a corruption-free, equitable, and prosperous Bangladesh, along with economic freedom for all citizens.
+
+We invite you to actively participate in this initiative to rebuild post-uprising Bangladesh.
+Let us stand shoulder to shoulder in this struggle to shape the future of our nation.
+
+In solidarity,
+Ali Ahsan Junayed
+Chief Initiator, United Peoples Bangladesh
+
+ </p>
                         </div>
                         <div class="single-achivment">
                             <img src="img/achivment.png" alt="">
                             <h4>Finibus Bonorum et Malorum 2010</h4>
-                            <p>There are many variations of passages of Lorem Ipsumavailable,but the majority have suffered
-                                alteration insome form, by injected humour amr sonar banla ami tomay </p>
+                            <p>Assalamu Alaikum,
+
+With a firm commitment to realizing the aspirations of July, the upcoming political platform has been named "United Peoples Bangladesh (UP Bangladesh)."
+
+By the aspirations of July, we specifically refer to a set of clearly defined objectives. With the broad support of the students and people of Bangladesh, this platform will move forward to achieve those goals, In Sha Allah.
+
+The primary objectives of the platform include:
+
+Seeking justice for the brutal massacres of Pilkhana, Shapla, and July,
+
+Demanding a ban on the fascist political party Awami League, and
+
+Building public opinion and political movements to ensure economic empowerment for the injured fighters and families of the martyrs of July.
+
+The long-term goals of the platform are:
+
+Transforming the existing political culture of Bangladesh,
+
+Establishing competent and ethical leadership across all sectors,
+
+Ensuring social justice and human dignity,
+
+Providing social security, and
+
+Rebuilding Bangladesh based on a social contract rooted in religious beliefs and moral values.
+
+We aim to uproot the cycle of muscle politics, corruption, and the criminal political economy that dominates current governance.
+
+The platform is committed to liberating Bangladesh from four major evils: Fascism, Imperialism, Anti-religious Bigotry, and Corruption.
+It will carry the vision of a corruption-free, equitable, and prosperous Bangladesh, along with economic freedom for all citizens.
+
+We invite you to actively participate in this initiative to rebuild post-uprising Bangladesh.
+Let us stand shoulder to shoulder in this struggle to shape the future of our nation.
+
+In solidarity,
+Ali Ahsan Junayed
+Chief Initiator, United Peoples Bangladesh
+
+ </p>
                         </div>
                     </div>
                 </div>
