--- a/demo.html
+++ b/demo.html
@@ -7,19 +7,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title> United People's Bangladesh - UP Bangladesh </title>
     <meta name="description" content="United People's Bangladesh - UP Bangladesh">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">s
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-
-    <!-- Plugins CSS
-	============================================ -->
     <link rel="stylesheet" href="plugins.css">
-    <!-- Style CSS
-	============================================ -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Modernizer JS
-	============================================ -->
+    <link rel="stylesheet" href="style.css">s
     <script src="modernizr-2.8.3.min.js"></script>
 </head>
 
@@ -116,7 +108,7 @@
             <div class="hero-slider">
 
                     <!--Hero Slide Item Start-->
-                    <div class="hs-item" style="background-image: url(img/hero-1.jpg)">
+                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);height:100vh;">
                         <!--Hero Slide Content-->
                         <div class="hs-item-wrapper fix">
                             <div class="hs-image float-left">
@@ -134,7 +126,7 @@
                     <!--Hero Slide Item End-->
 
                     <!--Hero Slide Item Start-->
-                    <div class="hs-item" style="background-image: url(img/hero-1.jpg)">
+                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);height:100vh;">
                         <!--Hero Slide Content-->
                         <div class="hs-item-wrapper fix">
                             <div class="hs-image float-left">
@@ -171,11 +163,20 @@
                 <div class="about-wrapper col-12 mb-80 d-flex flex-column flex-md-row">
 
                     <!--About Content-->
-                    <div class="about-content">
-                        <h2> Ali Ahsan Zonaed </h2>
-                        <p>There are many variations of passages of Lorem Ipsumavailable,but the majority have suffered
-                            alteration insome form, by injected humour amr sonar banla ami tomayvailable,but the majority
-                        </p>
+                    <div class="about-content" style="margin-bottom:20px">
+                        <h2> আলী আহসান জুনায়েদ </h2>
+                        <p> আসসালামু আলাইকুম। </p>
+                        <p> জুলাইয়ের আকাঙ্ক্ষাকে বাস্তবায়নের অঙ্গীকার নিয়ে গঠিত হতে যাওয়া আসন্ন রাজনৈতিক প্ল্যাটফর্মের নাম আমরা ঠিক করেছি "ইউনাইটেড পিপলস বাংলাদেশ (আপ বাংলাদেশ)"। </p>
+                        <p> জুলাইয়ের আকাঙ্খা বলতে আমরা সুনির্দিষ্টভাবে কিছু লক্ষ্যমাত্রা নির্ধারণ করেছি, যেটি বাস্তবায়নের লক্ষ্যে বাংলাদেশের আপামর ছাত্রজনতাকে সাথে নিয়ে প্ল্যাটফর্মটি এগিয়ে যাবে ইনশাআল্লাহ। </p>
+                        <button class="more-detils btn btn-secondary mx-auto" style="margin-bottom:15px;display: block;"> বিস্তারিত দেখুন ... </button>
+                        <div class="details d-none">
+                            <p> পিলখানা, শাপলা ও জুলাই গণহত্যার মতো ভয়াবহ অপরাধের বিচার, ফ্যাসিবাদী দল আওয়ামী লীগের নিষিদ্ধকরণ এবং জুলাইয়ের আহত যোদ্ধা ও শহীদ পরিবারকে অর্থনৈতিকভাবে স্বাবলম্বী করে তোলার দাবীতে জনমত ও রাজনৈতিক আন্দোলন গড়ে তোলা এই প্ল্যাটফর্মের প্রাথমিক লক্ষ্যমাত্রা হিসেবে বিবেচিত হবে৷  </p>
+                            <p>বাংলাদেশের বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন, সমাজের সর্বস্তরে যোগ্য ও নৈতিক নেতৃত্বের প্রতিষ্ঠা, সামাজিক সুবিচার ও মানবিক মর্যাদা প্রতিষ্ঠাকরণ, সামাজিক নিরাপত্তা বিধান এবং ধর্মীয় বিশ্বাস ও মূল্যবোধের প্রতি শ্রদ্ধাশীল সামাজিক চুক্তির ভিত্তিতে বাংলাদেশ পুনর্গঠন এই প্ল্যাটফর্মের দীর্ঘমেয়াদি লক্ষ্যমাত্রা। </p>
+                            <p>রাজনীতিতে পেশিশক্তির দাপট, দুর্নীতি ও দুর্বৃত্তায়নের রাজনৈতিক অর্থনীতির যেই বৃত্ত, দীর্ঘমেয়াদে আমরা তা উপড়ে ফেলতে চাই।</p>
+                            <p> ৪ টি রাহুগ্রাস থেকে বাংলাদেশকে মুক্ত করার অঙ্গীকার থাকবে এই প্ল্যাটফর্মের প্রস্তাবনায়--- ফ্যাসিবাদ, আধিপত্যবাদ, ধর্মবিদ্বেষ এবং দুর্নীতিমুক্ত বাংলাদেশ গড়ার প্রত্যয় ঘোষণা করবে জুলাই গণঅভ্যুত্থান শক্তির এই প্ল্যাটফর্মটি। </p>
+                            <p> বাংলাদেশের মানুষের অর্থনৈতিক আজাদি এবং বৈষম্যহীন সমৃদ্ধ বাংলাদেশ গড়ার প্রস্তাবনা থাকবে প্ল্যাটফর্মের পক্ষ থেকে।
+                            অভ্যুত্থান-পরবর্তী বাংলাদেশ পুনর্গঠনের এই উদ্যোগে আপনাদের সক্রিয় অংশগ্রহণের আহবান জানাই। আসুন, কাঁধে কাঁধ মিলিয়ে দেশ গঠনের এই সংগ্রামে শামিল হই। </p>
+                        </div>
                     </div>
 
                     <!--About Image-->
@@ -572,8 +573,9 @@ Chief Initiator, United Peoples Bangladesh
 
             <div class="row">
                 <div class="video-area overlay text-center col-lg-6 col-12">
-                    <a href="https://www.youtube.com/watch?v=855Am6ovK7s" class="video-popup"><i
-                            class="zmdi zmdi-youtube-play"></i></a>
+                    <a href="https://www.youtube.com/watch?v=Hy16rP79u3c" class="video-popup">
+                        <i class="zmdi zmdi-youtube-play"></i>
+                    </a>
                 </div>
                 <div class="newsletter-area col-lg-6 col-12">
 
@@ -696,7 +698,7 @@ Chief Initiator, United Peoples Bangladesh
                                 <p> Address: Level 16 (Top Floor), Pritom Jaman Tower, 37/2, Old Palton, Dhaka-1000.</p>
                                 <ul>
                                     <li><span>phone :</span> 0000 </li>
-                                    <li><span>email :</span> upbangladesh24@gmail.com</li>
+                                    <li><span>email :</span> <a href="mailto:upbangladesh24@gmail.com" target="_blank"> upbangladesh24@gmail.com </a> </li>
                                 </ul>
                             </div>
                         </div>
@@ -719,12 +721,12 @@ Chief Initiator, United Peoples Bangladesh
                         <!--Footer Widget Contact Form-->
                         <div class="footer-widget col-lg-5 col-12 mb-40">
                             <h4>GET IN TOUCH</h4>
-                            <form id="contact-form" action="mail.php" method="post">
+                            <form id="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLSczAxkgcYluNmmMJ_66nf6aPu40IS6crPAuysIA2Krg6bPJrA/formResponse" method="post">
                                 <div class="input-box-2">
-                                    <div class="input-box"><input name="name" type="text" placeholder="your name"></div>
-                                    <div class="input-box"><input name="email" type="email" placeholder="your email"></div>
+                                    <div class="input-box"><input name="YPqjbf" type="text" placeholder="your name"></div>
+                                    <div class="input-box"><input name="YPqjbf" type="email" placeholder="your email"></div>
                                 </div>
-                                <div class="input-box"><textarea name="message" placeholder="your massage"></textarea></div>
+                                <div class="input-box"><textarea name="YPqjbf" placeholder="your massage"></textarea></div>
                                 <div class="input-box"><input type="submit" value="submit"></div>
                             </form>
                             <p class="form-messege"></p>
@@ -770,6 +772,37 @@ Chief Initiator, United Peoples Bangladesh
     <!-- Main JS
 ============================================ -->
     <script src="main.js"></script>
+    <script>
+        $(".more-detils").click(function(){
+            $(".details").toggleClass("d-none");
+        });
+        const form = document.getElementById('contactForm');
+
+        form.addEventListener('submit', function(e) {
+          e.preventDefault();
+
+          const data = {
+            name: form.name.value,
+            email: form.email.value,
+            message: form.message.value
+          };
+
+          fetch('YOUR_WEB_APP_URL_HERE', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(data)
+          })
+          .then(res => res.json())
+          .then(response => {
+            // status.textContent = 'Form submitted successfully!';
+            form.reset();
+          })
+          .catch(error => {
+            // status.textContent = 'Error submitting form.';
+            console.error(error);
+          });
+        });
+    </script>
 </body>
 
 </html>
