--- a/demo.html
+++ b/demo.html
@@ -108,11 +108,11 @@
             <div class="hero-slider">
 
                     <!--Hero Slide Item Start-->
-                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);height:100vh;">
+                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);height:80vh;">
                         <!--Hero Slide Content-->
                         <div class="hs-item-wrapper fix">
                             <div class="hs-image float-left">
-                                <img src="img/profile.jpg" style="border-top-left-radius: 50px;border-top-right-radius:50px;" alt="">
+                                <img src="img/profile.jpg" style="border-top-left-radius: 50px;border-top-right-radius:50px;margin:50px auto;" alt="">
                             </div>
                             <div class="hs-content fix">
                                 <h2>We are ...</h2>
@@ -126,11 +126,11 @@
                     <!--Hero Slide Item End-->
 
                     <!--Hero Slide Item Start-->
-                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);height:100vh;">
+                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);height:80vh;">
                         <!--Hero Slide Content-->
                         <div class="hs-item-wrapper fix">
                             <div class="hs-image float-left">
-                                <img src="img/profile.jpg" style="border-top-left-radius: 50px;border-top-right-radius:50px;" alt="">
+                                <img src="img/profile.jpg" style="border-top-left-radius: 50px;border-top-right-radius:50px;margin:50px auto;" alt="">
                             </div>
                             <div class="hs-content fix">
                                 <h2>We are ...</h2>
