--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,5 @@
-
 <!doctype html>
 <html class="no-js" lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="plugins.css">
-    <link rel="stylesheet" href="style.css">s
+    <link rel="stylesheet" href="style.css">
     <script src="modernizr-2.8.3.min.js"></script>
 </head>
 
@@ -768,20 +766,20 @@ Chief Initiator, United Peoples Bangladesh
         });
         const newsletter = document.querySelector("#mc-form");
         const smsg = $(".subscribe-msg");
+
         $("#mc-submit").click(function(e){
             e.preventDefault(); // Prevent default form submission
 
             // Clear previous messages
             smsg.html("");
-            const formData = new FormData(newsletter);
-
-            fetch('https://docs.google.com/forms/u/0/d/e/1FAIpQLSe23MyYyBLspKV-qhvI8sR4VIfBzCm_BmQBVLAPqNtUHKK79w/formResponse', {
+            const newsLetterData = new FormData(newsletter);
+            fetch('https://docs.google.com/forms/d/e/1FAIpQLSe23MyYyBLspKV-qhvI8sR4VIfBzCm_BmQBVLAPqNtUHKK79w/formResponse', {
               method: 'POST',
               mode: 'no-cors', // Required to avoid CORS error
-              body: formData,
+              body: newsLetterData,
             })
               .then((feedback) => {
-                smsg.html('Form submitted successfully!');
+                smsg.html('Data submitted successfully!');
                 smsg.css("color", 'green');
                 console.log(feedback);
                 newsletter.reset(); // Clear the form
@@ -791,7 +789,8 @@ Chief Initiator, United Peoples Bangladesh
                 smsg.css("color", 'red');
                 console.error('Error:', error.message);
               });
-        })
+        });
+
         const form = document.getElementById('contact-form');
         const successMessage = $('.form-messege'); // For user feedback
 
@@ -823,5 +822,4 @@ Chief Initiator, United Peoples Bangladesh
         });
     </script>
 </body>
-
 </html>
