--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title> United People's Bangladesh - UP Bangladesh </title>
     <meta name="description" content="United People's Bangladesh - UP Bangladesh">
-    <meta name="viewport" content="width=device-width, initial-scale=1">s
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="plugins.css">
@@ -773,7 +773,9 @@ Chief Initiator, United Peoples Bangladesh
             // Clear previous messages
             smsg.html("");
             const newsLetterData = new FormData(newsletter);
-            fetch('https://docs.google.com/forms/d/e/1FAIpQLSe23MyYyBLspKV-qhvI8sR4VIfBzCm_BmQBVLAPqNtUHKK79w/formResponse', {
+            console.log([...newsLetterData.entries()]); // Log form data for debugging
+
+            fetch('https://docs.google.com/forms/u/0/d/e/1FAIpQLSe23MyYyBLspKV-qhvI8sR4VIfBzCm_BmQBVLAPqNtUHKK79w/formResponse', {
               method: 'POST',
               mode: 'no-cors', // Required to avoid CORS error
               body: newsLetterData,
@@ -822,4 +824,5 @@ Chief Initiator, United Peoples Bangladesh
         });
     </script>
 </body>
+
 </html>
