--- a/demo.html
+++ b/demo.html
@@ -759,7 +759,7 @@ Chief Initiator, United Peoples Bangladesh
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins.js"></script>
     <script src="ajax-mail.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js?v=1.1"></script>
     <script>
         $(".more-detils").click(function(){
             $(".details").toggleClass("d-none");
