--- a/demo.html
+++ b/demo.html
@@ -676,6 +676,23 @@ Chief Initiator, United Peoples Bangladesh
         </div>
         <!--Blog Area End-->
 
+        <!--Map Area End-->
+        <div id="video-newsletter-area" class="video-newsletter-area section">
+            <div class="container my-5">
+                <div class="row">
+                    <div class="section-title text-center col-12 mb-60">
+                        <h2> Office Location </h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-12 mx-auto">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3652.4079210966033!2d90.4096464!3d23.7328287!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9004f489051%3A0xbc2d09be906942a!2sUP%20Bangladesh%20head%20office!5e0!3m2!1sen!2sbd!4v1744554447393!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Map Area End-->
+
         <!--Footer Area Start-->
         <div id="footer-area" class="footer-area section">
 
@@ -759,7 +776,7 @@ Chief Initiator, United Peoples Bangladesh
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins.js"></script>
     <script src="ajax-mail.js"></script>
-    <script src="main.js?v=1.1"></script>
+    <script src="main.js"></script>
     <script>
         $(".more-detils").click(function(){
             $(".details").toggleClass("d-none");
