--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@
         </div>
         <!--Hero Area End-->
 
+        <!--Specil Area Start-->
+        <div id="special-area" class="about-area section pb-120 pt-120">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 mx-auto">
+                        <img src="img/1432.jpg" style="border-radius:20px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Specil Area End-->
+
         <!--About Area Start-->
         <div id="about-area" class="about-area section pb-120 pt-120">
             <div class="container">
