--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="plugins.css">
     <link rel="stylesheet" href="style.css">
     <script src="modernizr-2.8.3.min.js"></script>
+    <meta name="google-site-verification" content="aDP9gnceNUnOvt-AJfXe8V6EwC078CibvEBmITRYZ68" />
 </head>
 
 <body>
