--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="United People's Bangladesh - UP Bangladesh">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="United People's Bangladesh - UP Bangladesh">
-    <meta property="og:description" content="বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন ও সামাজিক চুক্তির পুনর্বহাল' এর মাধ্যমে 'বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশের লক্ষ্যে' জুলাই গণঅভ্যুত্থানের শক্তি তরুণদের সাহসিকতা ও প্রবীণদের অভিজ্ঞতার সমন্বয়ে আমাদের যাত্রা...">
+    <meta property="og:description" content="বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন ও সামাজিক চুক্তির পুনর্বহাল - এর মাধ্যমে 'বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশের লক্ষ্যে' জুলাই গণঅভ্যুত্থানের শক্তি তরুণদের সাহসিকতা ও প্রবীণদের অভিজ্ঞতার সমন্বয়ে আমাদের যাত্রা...">
     <meta property="og:image" content="https://upbangladesh.org/android-chrome-512x512.png">
     <meta property="og:url" content="https://upbangladesh.org/index.html">
     <meta property="og:type" content="website">
