--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://upbangladesh.org/android-chrome-512x512.png">
     <meta property="og:url" content="https://upbangladesh.org/index.html">
     <meta property="og:type" content="website">
+    <meta property="fb:app_id" content="1849982302524358">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="plugins.css">
