--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="United People's Bangladesh - UP Bangladesh">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="United People's Bangladesh - UP Bangladesh">
-    <meta property="og:description" content="বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন ও সামাজিক চুক্তির পুনর্বহাল - এর মাধ্যমে বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশের লক্ষ্যে জুলাই গণঅভ্যুত্থানের শক্তি তরুণদের সাহসিকতা ও প্রবীণদের অভিজ্ঞতার সমন্বয়ে আমাদের যাত্রা...">
+    <meta property="og:description" content="বিদ্যমান রাজনৈতিক সংস্কৃতির পরিবর্তন ও সামাজিক চুক্তির পুনর্বহাল- এর মাধ্যমে বৈষম্যহীন ও সমৃদ্ধ বাংলাদেশের লক্ষ্যে জুলাই গণঅভ্যুত্থানের শক্তি তরুণদের সাহসিকতা ও প্রবীণদের অভিজ্ঞতার সমন্বয়ে আমাদের যাত্রা...">
     <meta property="og:image" content="https://upbangladesh.org/android-chrome-512x512.png">
     <meta property="og:url" content="https://upbangladesh.org/index.html">
     <meta property="og:type" content="website">
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="plugins.css">
     <link rel="stylesheet" href="style.css">
     <script src="modernizr-2.8.3.min.js"></script>
-    <meta name="google-site-verification" content="aDP9gnceNUnOvt-AJfXe8V6EwC078CibvEBmITRYZ68" />
 </head>
 
 <body>
@@ -81,7 +80,7 @@
                         <div class="col-auto d-flex flex-md-row flex-lg-row-reverse">
                             <!--Header Donation Button-->
                             <div class="header-donation">
-                                <a class="btn" data-scroll href="#donation-area">donate</a>
+                                <a class="btn" data-scroll href="#donation-area">Join Today</a>
                             </div>
                             <!--Header Search End-->
 
