--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="col-auto">
                             <!--Header Logo Start-->
                             <div class="navbar-header d-flex justify-content-between">
-                                <a href="index.html" class="logo navbar-brand"><img src="logo.jpg" alt="logo" style="border-radius:10px"></a>
+                                <a href="index.html" class="logo navbar-brand"><img src="logo.jpg" alt="logo"></a>
                                 <button class="navbar-toggle collapsed d-block d-md-none" data-bs-toggle="collapse" data-bs-target="#main-menu">
                                     <i class="zmdi zmdi-menu menu-open"></i>
                                     <i class="zmdi zmdi-close menu-close"></i>
@@ -112,7 +112,7 @@
             <div class="hero-slider">
 
                     <!--Hero Slide Item Start-->
-                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);height:80vh;">
+                    <div class="hs-item" style="background-image: url(img/hero-1.jpg);">
                         <!--Hero Slide Content-->
                         <div class="hs-item-wrapper fix">
                             <div class="hs-image float-left">
@@ -156,7 +156,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <img src="img/1432.jpg" style="border-radius:20px;">
+                        <img class="img-responsive" src="img/1432.jpg" style="border-radius:20px;">
                     </div>
                 </div>
             </div>
