--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
     <script>
         $(".more-detils").click(function(){
             $(".details").toggleClass("d-none");
+            $(this).addClass("d-none");
         });
         const newsletter = document.querySelector("#mc-form");
         const smsg = $(".subscribe-msg");
