--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                             <div class="contact-info fix">
                                 <p> Address: Level 16 (Top Floor), Pritom Jaman Tower, 37/2, Old Palton, Dhaka-1000.</p>
                                 <ul>
-                                    <li><span>phone :</span> 0000 </li>
-                                    <li><span>email :</span> <a href="mailto:upbangladesh24@gmail.com" target="_blank"> upbangladesh24@gmail.com </a> </li>
+                                    <!-- <li><span>Phone :</span> 0000 </li> -->
+                                    <li><span>Email :</span> <a href="mailto:upbangladesh24@gmail.com" target="_blank"> upbangladesh24@gmail.com </a> </li>
                                 </ul>
                             </div>
                         </div>
